# nikita-voronoy-github

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html  resume.yaml
.github/workflows/: deploy.yml
src/: data.rs  main.rs
src/components/: competencies.rs  contributions.rs  experience.rs  floating_card.rs  footer.rs  hero.rs  mod.rs
src/utils/: download.rs  mod.rs
styles/: main.css
