[package]
name = "nikita-voronoy-github"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "Url", "HtmlAnchorElement", "Document", "Window", "BlobPropertyBag", "Storage"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
gloo-storage = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
